--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SUPABASE_URL="<your supabase url here>"
+SUPABASE_URL="https://fpmwvurvspfknfdokhpi.supabase.co"
 SUPABASE_KEY="<your supabase key here>"
 CLOUDINARY_URL=cloudinary://<api_key>:<api_secret>@<cloud_name>
 CLOUDINARY_API_KEY=<your cloudinary key here>
